# boondmanager-multiagent

./: .env.example  .gitignore  .mcp.json  API_SUMMARY.md  CLAUDE.md  EXPLORATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  Makefile  PROJECT_AGENT_README.md  QUICK_START_EXPLORATION.md  README.md  pyproject.toml  test_api.py
.claude/prompts/: claude-desktop-prompt.md  claude-desktop-response.md  main-project-brief.md
claudedocs/: boondmanager_invoicing_api_documentation.md  design_assessment.md  implementation_status.md  invoice_generation_workflow.md
docs/: API_EXPLORATION.md  API_FINDINGS.md  API_RESPONSE_TIMESREPORT.md  ARCHITECTURE.md  ARCHITECTURE_PROPOSAL.md  BOONDMANAGER_API_INTEGRATION.md  CLIENT_ID_RESOLUTION.md  DISPATCH_VERIFICATION_REQUIREMENTS.md  IMPLEMENTATION_PLAN.md  LANGGRAPH_RESEARCH.md  MVP_ARCHITECTURE.md  RECONCILIATION_TEAM_DESIGN.md  SETUP_STATUS.md  TIMESHEET_API_FINDINGS.md
docs/api_responses/: contacts_20251010_153212.json  project_8_information_20251010_153211.json  project_8_orders_20251010_153211.json  project_8_productivity_20251010_153210.json  project_8_profile_20251010_153210.json  project_8_rights_20251010_153212.json  project_8_tasks_20251010_153211.json  projects_search_20251010_153210.json
docs/endpoints/: invoices.md  postproduction_invoices.md  validate_timesheet.md
examples/: README.md  project_queries.py  timesheet_queries.py
policies/: README.md  delegation_best_practices.md  error_handling_protocols.md  invoice_generation_workflow.md  orchestrator_prompt_engineering.md  timesheet_validation.md
scripts/: README.md  explore_api.py
scripts/schema_to_pydantic/: get_timesreports.json  get_timesreports.py  get_timesreports_by_id.json  get_timesreports_by_id.py
src/: config.py  format_utils.py  graph.py  llm_config.py  main.py  orchestrator.py  utils.py  workflow.py
src/agents/: __init__.py  agent.py  emailing_agent.py  invoice_agent.py  main_coordinator.py  orchestrator_agent.py  planner_agent.py  project_agent.py  query_agent.py  reconciliation_agent.py  resource_agent.py  timesheet_agent.py  validation_agent.py  verification_agent.py
src/agents/subagents/: emailing.py  invoice.py  project.py  query.py  resource.py  timesheet.py  validation.py
src/experiments/: hitl_tools.py
src/experiments/manual_agent/: main.py
src/experiments/manual_agent/subagents/: emailing.py  project.py  query.py  resource.py  timesheet.py  validation.py
src/indexing/: __init__.py  index_policies.py
src/integrations/: auth.py  boond_client.py
src/middleware/: parse_fail_check.py  planning.py  revisor.py
src/models/: state.py
src/no_tool_calls/: assistant.py  graph.py  routing.py  state.py  tools.py
src/no_tool_calls/subagents/: __init__.py  project.py  query.py  resource.py  timesheet.py
src/nodes/: email_parser.py  invoice_generation.py  notification.py  project_resolution.py  reconciliation.py  validation.py
src/tools/: __init__.py  common_tools.py  email_tools.py  invoice_tools.py  policy_rag_tool.py  project_tools.py  resource_tools.py  timesheet_tools.py  validation_tool.py
tests/: test_project_tools.py
tests/e2e/: test_email_validation_workflow.py  test_invoice_generation_workflow.py
tests/fixtures/: sample_email.txt  sample_email_simple.txt
tests/integration/: test_timesheet_validation.py
tests/unit/: test_email_parser.py  test_project_resolution.py
